--- a/index-2.html
+++ b/index-2.html
@@ -12,7 +12,7 @@
             <div class ="nav-left">
                 <img src="https://res.cloudinary.com/dv7yq8yly/image/upload/v1686708924/logo_ob9chi.png" class="logo">
                 <ul>
-                    <li><img src="https://res.cloudinary.com/dv7yq8yly/image/upload/v1686709313/notification_hz4uct.png"></li>
+                    <li><img src="https://unsplash.com/s/photos/image"></li>
                     <li><img src="https://res.cloudinary.com/dv7yq8yly/image/upload/v1686709470/inbox_cpw5tx.png"></li>
                     <li><img src="https://res.cloudinary.com/dv7yq8yly/image/upload/v1686709496/video_xbdnvk.png"></li>
                 </ul>
